--- a/IconButton/IconButton.less
+++ b/IconButton/IconButton.less
@@ -91,8 +91,7 @@
 
 		&.smallest {
 			height: 45px;
-			min-width: 0;
-			width: 45px;
+			min-width: 45px;
 
 			.icon {
 				font-size: 48px;
