--- a/styles/colors-electro.less
+++ b/styles/colors-electro.less
@@ -61,6 +61,8 @@
 @agate-button-focus-bg-image: @electro-overlay-light-gradient;
 @agate-button-highlighted-bg-color: @agate-highlight;
 @agate-button-highlighted-bg-image: @electro-highlight-gradient;
+@agate-button-selected-bg-color: @electro-accent2-color;
+@agate-button-selected-color: @agate-foreground-active;
 
 // ColorPicker
 // ---------------------------------------
