--- a/styles/colors-titanium.less
+++ b/styles/colors-titanium.less
@@ -49,6 +49,8 @@
 @agate-button-focus-bg-image: none;
 @agate-button-highlighted-bg-color: @agate-background-focus;
 @agate-button-highlighted-bg-image: none;
+@agate-button-selected-bg-color: @agate-accent;
+@agate-button-selected-color: @agate-foreground-active;
 
 // ColorPicker
 // ---------------------------------------
