--- a/styles/variables-copper.less
+++ b/styles/variables-copper.less
@@ -62,7 +62,7 @@
 // Drawer
 // ---------------------------------------
 @agate-drawer-border-radius: @agate-popup-border-radius;
-@agate-drawer-border-width: @agate-popup-border-width;
+@agate-drawer-border-width: 0;
 @agate-drawer-border: @agate-popup-border;
 @agate-drawer-padding: @agate-popup-padding;
 
